# MrHyDE

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  COPYRIGHT  Config.cmake.in  INSTALL.txt  License.md  README.md
doc/Tutorial/Exercises/: CMakeLists.txt  Exercise_AutoDiff.cpp  Exercise_KokkosViews.cpp
sandbox/: CMakeLists.txt  hex-physical-extruded.exo  hex-physical-general.exo  hex-reference.exo  hexes.jou  tIOSSConnManager.cpp  test_Compression.cpp  test_DOFManagers.cpp  test_PanzerStk.cpp  test_SimpleMesh.cpp  test_SparseHDIVMass.cpp  test_SparseMass.cpp  test_compadre.cpp  test_databaseViews.cpp  test_explicit_views.cpp  test_functions.cpp  test_parallel_for.cpp  test_percept.cpp  test_scaling_reduction.cpp  test_series_ABC.cpp  test_template.cpp  test_template.hpp  test_view_conversion.cpp  test_views.cpp  test_vistas.cpp
sandbox/testCases/hcurl_dirichlet_test/: debug.out  input.yaml  input_functions.yaml
sandbox/testCases/hgrad_dirichlet_test/: debug.out  input.yaml  input_mesh.yaml
sandbox/testCases/multiphase_porous/: input.yaml
sandbox/testCases/shallowwater/: input.yaml  input_fixedBC.yaml  subgrid_input_fixedBC.yaml  subgrid_input_steady.yaml
sandbox/testCases/shallowwater-CG/: input.yaml  input_fixedBC.yaml
sandbox/testCases/shallowwater-drop/: subgrid_input.yaml
sandbox/testCases/shallowwater-inlet-heterogeneous/: generateBath.py
src/: CMakeLists.txt  driver.cpp  preferences.hpp  trilinos.hpp
src/interfaces/: CompadreInterface.hpp  Compadre_interface.hpp  MirageTranslator.hpp  analysisInterface.cpp  analysisInterface.hpp  discretizationInterface.cpp  discretizationInterface.hpp  fftInterface.hpp  linearAlgebraInterface.cpp  linearAlgebraInterface.hpp  meshInterface.cpp  meshInterface.hpp  multiscaleInterface.cpp  multiscaleInterface.hpp  physicsInterface.cpp  physicsInterface.hpp  postprocessInterface.cpp  postprocessInterface.hpp  solverInterface.cpp  solverInterface.hpp  uqInterface.cpp  uqInterface.hpp  userInterface.hpp
src/interfaces/discretization/: discretizationInterface.cpp  discretizationInterface.hpp  discretizationInterface_basis.hpp  discretizationInterface_construct.hpp  discretizationInterface_dof.hpp  discretizationInterface_integration.hpp  discretizationInterface_util.hpp
src/interfaces/fft/: fftInterface.hpp
src/interfaces/linear_algebra/: linearAlgebraInterface.cpp  linearAlgebraInterface.hpp  linearAlgebraInterface_blockprec.hpp  linearAlgebraInterface_construct.hpp  linearAlgebraInterface_matrix.hpp  linearAlgebraInterface_solvers.hpp  linearAlgebraInterface_util.hpp  linearAlgebraInterface_vector.hpp  linearSolverContext.hpp  linearSolverOptions.hpp
src/interfaces/mesh/: meshInterface.cpp  meshInterface.hpp  meshInterface_construct.hpp  meshInterface_exodus.hpp  meshInterface_stk.hpp  meshInterface_util.hpp
src/interfaces/physics/: physicsInterface.cpp  physicsInterface.hpp  physicsInterface_boundary_conditions.hpp  physicsInterface_initial.hpp  (+5 more)
src/managers/: analysisManager.cpp  analysisManager.hpp  assemblyManager.cpp  assemblyManager.hpp  functionManager.cpp  functionManager.hpp  multiscaleManager.cpp  multiscaleManager.hpp  parameterManager.cpp  parameterManager.hpp  postprocessManager.cpp  postprocessManager.hpp  sensorManager.cpp  sensorManager.hpp  solverManager.cpp  solverManager.hpp  uqManager.cpp  uqManager.hpp
src/optimization/: CDBatchManager.hpp  MrHyDE_Objective.hpp  MrHyDE_OptVector.hpp  MrHyDE_Sample_Set_Reader.hpp  MrHyDE_Stochastic_Objective.hpp  MrHyDE_TeuchosBatchManager.hpp  control_vector.hpp  obj_milorol.hpp  obj_milorol_simopt.hpp  pobj_milorol.hpp
src/physics/: CrystalElasticity.cpp  CrystalElasticity.hpp  burgers.cpp  burgers.hpp  cdr.cpp  cdr.hpp  cdr2.cpp  cdr2.hpp  cns.cpp  cns.hpp  convdiff.hpp  elastodynamics.cpp  elastodynamics.hpp  ellipticPrior.cpp  ellipticPrior.hpp  euler.cpp  euler.hpp  hartmann.cpp  hartmann.hpp  helmholtz.cpp  helmholtz.hpp  incompressibleSaturation.cpp  incompressibleSaturation.hpp  kuramotoSivashinsky.cpp  kuramotoSivashinsky.hpp  levelSet.cpp  levelSet.hpp  linearelasticity.cpp  linearelasticity.hpp  llamas.hpp  maxwell.cpp  maxwell.hpp  maxwell_bianisotropic.cpp  maxwell_bianisotropic.hpp  maxwell_control.cpp  maxwell_control.hpp  maxwell_general.cpp  maxwell_general.hpp  maxwell_hybridized.cpp  maxwell_hybridized.hpp  (+78 more)
src/subgrid/: subgridDtN.cpp  subgridDtN.hpp  subgridDtN2.cpp  subgridDtN2.hpp  subgridDtN_solver.cpp  subgridDtN_solver.hpp  subgridExplicitFEM.cpp  subgridFEM.cpp  subgridFEM.hpp  subgridFEM2.cpp  subgridFEM2.hpp  subgridFEM_solver.cpp  subgridFEM_solver.hpp  subgridGenerator.hpp  subgridLocalData.hpp  subgridMacroData.hpp  subgridMacroData2.hpp  subgridMeshFactory.cpp  subgridMeshFactory.hpp  subgridModel.hpp  subgridTools.cpp  subgridTools.hpp  subgridTools2.cpp  subgridTools2.hpp
src/test/: test_compadre.cpp  test_functions.cpp  test_interpreter.cpp  test_percept.cpp  test_views.cpp
src/tools/: CompadreTools.hpp  ExoReader.cpp  ExoReader.hpp  Intrepid2_HDIV_AC_QUAD_I1_FEM.hpp  Intrepid2_HDIV_AC_QUAD_I1_FEMDef.hpp  Intrepid2_HFACE_HEX_In_FEM.hpp  Intrepid2_HFACE_HEX_In_FEMdef.hpp  Intrepid2_HFACE_QUAD_In_FEM.hpp  Intrepid2_HFACE_QUAD_In_FEMdef.hpp  Intrepid2_HFACE_TET_In_FEM.hpp  Intrepid2_HFACE_TET_In_FEMdef.hpp  Intrepid2_HFACE_TRI_In_FEM.hpp  Intrepid2_HFACE_TRI_In_FEMdef.hpp  MrHyDE_Debugger.cpp  MrHyDE_Debugger.hpp  MrHyDE_help.hpp  assemblyManager.cpp  assemblyManager.hpp  boundaryCell.cpp  boundaryCell.hpp  boundaryGroup.cpp  boundaryGroup.hpp  boundaryWorkset.cpp  boundaryWorkset.hpp  cell.cpp  cell.hpp  cellMetaData.cpp  cellMetaData.hpp  compressedView.hpp  dag.hpp  data.cpp  data.hpp  databaseView.hpp  discretizationTools.cpp  discretizationTools.hpp  fields.hpp  function.hpp  functionManager.cpp  functionManager.hpp  function_class.hpp  (+43 more)
src/user/: functionInterface.cpp  functionInterface.hpp  interpreter.hpp  term.hpp  userDefined_base.hpp  userDefined_default.hpp
unit_tests/physics/: CMakeLists.txt  Euler.cpp  NavierStokes.cpp  SWE_unittest.ipynb  invFluxesEuler.ipynb  invFluxesSWE.ipynb  shallowwaterHybridized.cpp
(+1254 files in other folders)
